vlib/v/checker/tests/int_modulo_by_zero_err.out
vlib/v/checker/tests/int_modulo_by_zero_err.vv:2:17: error: modulo by zero
    1 | fn main() {
    2 |     println(3 % 0)
      |                 ^
    3 | }
