vlib/v/checker/tests/int_modulo_by_zero_err.vv
fn main() {
	println(3 % 0)
}
